<resources>
    <string name="app_name">Laundry Express</string>
    <string name="server_client_id">367025051327-r46aoldq278vsppo5dco70luapk409h9.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_us">Welcome to Laundry Express, your one-stop solution for all your laundry needs. We understand that your time is precious, and laundry can take up a significant portion of it. That is why we have created an easy and convenient way to get your laundry done without hassle using our app.</string>

    <string name="text_two_lines">Primis odio inceptos condimentum viverra vehicula eros. Egestas pharetra sagittis vestibulum libero ligula mattis per.</string>

    <string name="step_1">Step 1: Schedule a Pick-up -
       Using our laundry express app, you can schedule a convenient date and time for us to pick up your laundry with our laundry shop partners. We will arrive at your specified location and collect your laundry.</string>

    <string name="step_2">Step 2: Select preferred services -
      Our laundry shop partners have some services that will suit your needs. You just need to Choose the services you preferred on your booking and our professional partners will handle it with their utmost care for you.</string>

    <string name="step_3">Step 3: Delivery -
       Once your laundry is ready, we will send you a notification through the app. You can then schedule a time for them to deliver your laundry back to you. Our delivery drivers will arrive at your specified location, and your clean laundry will be handed over to you.</string>

    <string-array name="sex">
        <item name="">Select Sex</item>
        <item name="Male">Male</item>
        <item name="Female">Female</item>
    </string-array>

    <string-array name="vehicle">
        <item name="Select">Select Vehicle to use</item>
        <item name="Bicycle">Bicycle</item>
        <item name="Motorcycle">Motorcycle</item>
        <item name="Wheels">Wheels</item>
    </string-array>

    <string-array name="bookStatus">
        <item name="all">ALL</item>
        <item name="pending">PENDING</item>
        <item name="pickup">ON PICK UP</item>
        <item name="process">ON PROCESS</item>
        <item name="delivery">ON DELIVERY</item>
        <item name="received">ON RECEIVED</item>
        <item name="complete">COMPLETE</item>
    </string-array>

    <string name="title_activity_dashboard_partner_drawer">DashboardPartnerDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_home">Home</string>
    <string name="nav_orders">Bookings</string>
    <string name="nav_updates">Updates</string>
    <string name="nav_inbox">Inbox</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_personal_info">Personal</string>
    <string name="nav_business_info">Business</string>
    <string name="title_activity_partner_drawer">PartnerDrawerActivity</string>
    <string name="logout">Logout</string>
    <string name="rate">Rates</string>
    <string name="user_agreement">*\t By using our laundry services, you agree to our terms and conditions.
        \n*\t You are responsible for ensuring that your items are clean and labeled with any special washing instructions.
        \n*\tPayment must be made in full at the time of pickup or delivery.
        \n*\t Our intellectual property is our own and cannot be used without our permission.
        \n*\t We collect personal information but will not sell or share it without your consent.
        \n*\t Any disputes will be resolved in accordance with the laws of our state or country.
        \n*\t We may modify this agreement at any time and will notify you of any changes.</string>
    <string name="user_acknowledgement">"By accepting this user agreement, you
        acknowledge and agree that you are responsible for double-checking all information and confirmations provided to you through our platform or services.
        \n You understand that once a confirmation is made or a statement is provided, it cannot be changed.
        \n Therefore, it is your responsibility to ensure that all information provided
 to us is accurate and complete before making any confirmations or relying on any statements."
    </string>
    <string name="indication">Indicator</string>
    <string name="retrieve_shop_prompt">We don\'t have Available Laundry Shop partner in your area.</string>
    <string name="retrieve_book_prompt">SORRY! NO BOOK YET!</string>
    <string name="retrieve_orders_prompt">SORRY! NO ORDERS YET!</string>
    <string name="retrieve_rides_prompt">SORRY! NO RIDES YET!</string>
    <string name="retrieve_notifcation_prompt">SORRY! NO UPDATES YET!</string>


</resources>