<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StartFragment">


    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="30dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle"
                    android:src="@drawable/icon_logo"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-smallcaps"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/H1"
                    android:textStyle="bold|italic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="20dp"
                android:background="@drawable/rounded_rectangle"
                android:backgroundTint="@color/color_light_3"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:src="@drawable/banner" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:text="About Us"
                    android:textColor="@color/color_blue_1"
                    android:textSize="@dimen/H1"
                    android:textStyle="bold" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textSize="@dimen/H4"
                    android:text="@string/about_us" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:padding="20dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/color_light_3">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/color_blue_1"
                android:text="How it Works?"
                android:textSize="@dimen/H2"
                android:textStyle="bold" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="To make it this Happen, we have 3 steps on how it is goes."
                android:textSize="@dimen/H5"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp"
                android:background="@drawable/rounded_rectangle"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:src="@drawable/icon_logo" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:justificationMode="inter_word"
                    android:textSize="@dimen/H4"
                    android:text="@string/text_two_lines" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@drawable/rounded_rectangle"
                android:weightSum="12">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:justificationMode="inter_word"
                    android:textSize="@dimen/H4"
                    android:text="@string/text_two_lines" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:src="@drawable/icon_logo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:padding="20dp"
                android:background="@drawable/rounded_rectangle"
                android:weightSum="12">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:src="@drawable/icon_logo" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:textSize="@dimen/H4"
                    android:justificationMode="inter_word"
                    android:text="@string/text_two_lines" />


            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:padding="20dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/color_light_3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="sans-serif"
                android:textColor="@color/color_blue_1"
                android:text="Reach Us On"
                android:textSize="@dimen/H2"
                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Call Us @ +63 997 123 1234"
                android:textSize="@dimen/H5" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="Vist Us @ Street1, Manila Philippines"
                android:textSize="@dimen/H5" />

        </LinearLayout>



        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/vector_right"
        android:textColor="@color/color_light_3"
        android:text=""/>

</FrameLayout>